ChangeLog of HGTector

== Incremental update (11/6/2016) ==
New features:
- Added Python 3 support for databaser.py
Bug fixes:
- NCBI has changed the FTP site file system structure (see [notification](https://www.ncbi.nlm.nih.gov/news/08-30-2016-genomes-ftp-reorganization/)). So databaser.py was modified accordingly.


== Version 0.2.1 (2/2/2016) ==

New features:
- Optimized the process of self-alignment by DIAMOND and RAPSearch2. Significantly faster.
Results don't change.
- Added a smart decision-making process. If the user does not specify a proper grouping scenario,
the program will try to generate one.
- Changed the way of creating graphics.

Bug fixes:
- Disabled FTP passive mode in databaser.py.


== Version 0.2.0 (major upgrade) (10/25/2015) ==

Note:
- Major modification of the entire pipeline.

Structural change:
- Renamed blaster and summarizer as searcher and reporter, respectively.
- Removed filterer, taxonomer and validator
- Renamed input / output files and directories.
- Re-wrote searcher.
- Re-wrote the main program.
- Re-wrote the GUI.

New features:
- New script databaser.py to create a customized, taxonomically balanced BLAST database, which
significantly improves the efficiency and accuracy of HGT discovery, comparing to the
original nr.
- Added native support for non-BLAST search tools, including RAPSearch2 and DIAMOND.
- Allowed one protein to correspond to multiple TaxIDs. This further balances the taxonomic
distribution of reference proteins.

Bug fixes:
- Many bug fixes.


== Same version number (9/1/2015) ==

New features:
- Re-wrote the GUI.

Bug fixes:
- Several bug fixes.


== Version 0.1.9 (6/1/2015) ==

New features:
- Accepting pre-computed BLAST results (by BLAST, Blat, Usearch, etc).
- Sending multiple query sequences per search, thus accelerating the batch BLAST task.
- Looking up taxonomy from a GI-to-TaxID dictionary, thus accelerating the process.
- Plotting reference gene set along with prediction results.